--- a/app/src/main/res/menu/toolbar_menu_about.xml
+++ b/app/src/main/res/menu/toolbar_menu_about.xml
@@ -11,7 +11,7 @@
     <item
         android:id="@+id/miThemeAbout"
         android:icon="@drawable/ic_theme_light"
-        android:title="@string/menu_theme"
+        android:title="@string/menu_settings"
         app:showAsAction="ifRoom" />
 
     <item
