--- a/app/src/main/res/values/config.xml
+++ b/app/src/main/res/values/config.xml
@@ -3,6 +3,7 @@
     <bool name="enable_store">false</bool>
     <bool name="enable_search">true</bool>
     <bool name="enable_ads">false</bool>
+    <bool name="enable_background_view">true</bool>
 
     <bool name="use_light_status_bar">true</bool>
 </resources>
