--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#F44336</color>
-    <color name="colorPrimaryDark">#D32F2F</color>
-    <color name="colorSecondary">#f29323</color>
+    <color name="colorPrimary">#3675F4</color>
+    <color name="colorPrimaryDark">#2F58D3</color>
+    <color name="colorSecondary">#23B0F2</color>
 
     <color name="whiteColor">#ffffff</color>
     <color name="defaultBgColor">#ffffff</color>
