--- a/app/src/main/res/menu/bab_menu_video_details.xml
+++ b/app/src/main/res/menu/bab_menu_video_details.xml
@@ -1,16 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <item android:id="@+id/miFavoriteBabVideoDetails"
-        android:title="@string/menu_add_to_favorites"
+    <item
+        android:id="@+id/miOpenBabVideoDetails"
+        android:icon="@drawable/ic_youtube"
+        android:title="@string/menu_open_in_youtube"
+        app:showAsAction="always"
+        tools:ignore="AlwaysShowAction" />
+
+    <item
+        android:id="@+id/miFavoriteBabVideoDetails"
         android:icon="@drawable/ic_favorite_border"
-        app:showAsAction="always"/>
+        android:title="@string/menu_add_to_favorites"
+        app:showAsAction="always" />
 
-    <item android:id="@+id/miShareBabVideoDetails"
-        android:title="@string/menu_share"
+    <item
+        android:id="@+id/miShareBabVideoDetails"
         android:icon="@drawable/ic_share"
+        android:title="@string/menu_share"
         app:showAsAction="always"
         tools:ignore="AlwaysShowAction" />
 </menu>
