--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#E57373</color>
-    <color name="colorPrimaryDark">#f44336</color>
-    <color name="colorSecondary">#e5ac73</color>
+    <color name="colorPrimary">#7393E5</color>
+    <color name="colorPrimaryDark">#3656F4</color>
+    <color name="colorSecondary">#73CAE5</color>
 
     <color name="defaultBgColor">#121212</color>
 
