--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -13,9 +13,6 @@
         <action
             android:id="@+id/action_homeFragment_to_searchFragment"
             app:destination="@id/searchFragment" />
-        <action
-            android:id="@+id/action_homeFragment_to_nowPlayingFragment"
-            app:destination="@id/nowPlayingFragment" />
     </fragment>
     <fragment
         android:id="@+id/playlistsFragment"
@@ -56,6 +53,9 @@
             android:name="playlistName"
             app:argType="string" />
         <argument
+            android:name="playlistType"
+            app:argType="string" />
+        <argument
             android:name="playlistId"
             app:argType="string" />
         <argument
@@ -81,15 +81,5 @@
         android:name="tsfat.yeshivathahesder.channel.fragment.AppInfoFragment"
         android:label="@string/fragment_app_info"
         tools:layout="@layout/fragment_app_info" />
-
-    <fragment
-        android:id="@+id/audioFragment"
-        android:name="tsfat.yeshivathahesder.channel.fragment.AudioFragment"
-        android:label="fragment_search"
-        tools:layout="@layout/fragment_audio" />
-    <fragment
-        android:id="@+id/nowPlayingFragment"
-        android:name="tsfat.yeshivathahesder.channel.uamp.fragments.NowPlayingFragment"
-        android:label="NowPlayingFragment" />
 
 </navigation>
