--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:navGraph="@navigation/nav_graph" />
 
-    <androidx.cardview.widget.CardView
+    <com.google.android.material.card.MaterialCardView
         android:id="@+id/nowPlayingCard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -27,13 +27,164 @@
         android:layout_marginBottom="5dp"
         app:layout_constraintBottom_toTopOf="@+id/bottomNavView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:strokeColor="@color/colorPrimary"
+        app:strokeWidth="2dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/nowPlaying"
+            android:id="@+id/nowPlayingMaximized"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimary">
+            android:background="@color/defaultBgColor"
+            android:padding="5dp"
+            android:visibility="gone">
+
+            <ProgressBar
+                android:id="@+id/pbNowPlayingLoadingMax"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/titleMax"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAppearance="@style/TextAppearance.Uamp.Title"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="כותרת" />
+
+            <TextView
+                android:id="@+id/subtitleMax"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:textAppearance="@style/TextAppearance.Uamp.Subtitle"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/titleMax"
+                tools:text="סדרה" />
+
+            <SeekBar
+                android:id="@+id/seekBar"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/subtitleMax" />
+
+            <TextView
+                android:id="@+id/positionMax"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:textAppearance="@style/TextAppearance.Uamp.Title"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/seekBar"
+                tools:layout_editor_absoluteX="401dp"
+                tools:text="0:00" />
+
+            <TextView
+                android:id="@+id/durationMax"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
+                android:textAppearance="@style/TextAppearance.Uamp.Title"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/seekBar"
+                tools:text="0:00" />
+
+            <LinearLayout
+                android:id="@+id/buttons"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/stopButtonMax"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/durationMax">
+
+                <ImageButton
+                    android:id="@+id/skipPrevButtonMax"
+                    android:layout_width="@dimen/exo_media_button_width"
+                    android:layout_height="@dimen/exo_media_button_height"
+                    android:background="?attr/selectableItemBackground"
+                    android:scaleType="centerInside"
+                    android:visibility="gone"
+                    app:srcCompat="@drawable/ic_baseline_skip_previous_24"
+                    tools:ignore="ContentDescription" />
+
+                <ImageButton
+                    android:id="@+id/replayButtonMax"
+                    android:layout_width="@dimen/exo_media_button_width"
+                    android:layout_height="@dimen/exo_media_button_height"
+                    android:background="?attr/selectableItemBackground"
+                    android:scaleType="centerInside"
+                    app:srcCompat="@drawable/ic_baseline_replay_10_24"
+                    tools:ignore="ContentDescription" />
+
+                <ImageButton
+                    android:id="@+id/playPauseButtonMax"
+                    android:layout_width="@dimen/exo_media_button_width"
+                    android:layout_height="@dimen/exo_media_button_height"
+                    android:background="?attr/selectableItemBackground"
+                    android:scaleType="centerInside"
+                    app:srcCompat="@drawable/ic_play_arrow_black_24dp"
+                    tools:ignore="ContentDescription" />
+
+                <ImageButton
+                    android:id="@+id/forwardButtonMax"
+                    android:layout_width="@dimen/exo_media_button_width"
+                    android:layout_height="@dimen/exo_media_button_height"
+                    android:background="?attr/selectableItemBackground"
+                    android:scaleType="centerInside"
+                    app:srcCompat="@drawable/ic_baseline_forward_10_24"
+                    tools:ignore="ContentDescription" />
+
+                <ImageButton
+                    android:id="@+id/skipNextButtonMax"
+                    android:layout_width="@dimen/exo_media_button_width"
+                    android:layout_height="@dimen/exo_media_button_height"
+                    android:background="?attr/selectableItemBackground"
+                    android:scaleType="centerInside"
+                    android:visibility="gone"
+                    app:srcCompat="@drawable/ic_baseline_skip_next_24"
+                    tools:ignore="ContentDescription" />
+
+            </LinearLayout>
+
+            <ImageButton
+                android:id="@+id/stopButtonMax"
+                android:layout_width="@dimen/exo_media_button_width"
+                android:layout_height="@dimen/exo_media_button_height"
+                android:background="?attr/selectableItemBackground"
+                android:scaleType="centerInside"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/durationMax"
+                app:srcCompat="@drawable/ic_baseline_close_24"
+                tools:ignore="ContentDescription"
+                tools:layout_editor_absoluteY="47dp" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/nowPlayingMinimized"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/defaultBgColor">
 
             <ProgressBar
                 android:id="@+id/pbNowPlayingLoading"
@@ -70,6 +221,7 @@
                 android:id="@+id/title"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
                 android:layout_marginTop="8dp"
                 android:ellipsize="end"
                 android:maxLines="1"
@@ -83,6 +235,7 @@
                 android:id="@+id/subtitle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:textAppearance="@style/TextAppearance.Uamp.Subtitle"
@@ -118,7 +271,8 @@
                 app:layout_constraintTop_toBottomOf="@id/position"
                 tools:text="0:00" />
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.cardview.widget.CardView>
+
+    </com.google.android.material.card.MaterialCardView>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavView"
