--- a/app/src/main/res/menu/app_info_menu.xml
+++ b/app/src/main/res/menu/app_info_menu.xml
@@ -30,4 +30,11 @@
         android:title="@string/menu_privacy_policy"
         app:showAsAction="always"
         tools:ignore="AlwaysShowAction" />
+
+    <item
+        android:id="@+id/miSourceCodeAppInfo"
+        android:icon="@drawable/ic_code"
+        android:title="@string/menu_privacy_policy"
+        app:showAsAction="always"
+        tools:ignore="AlwaysShowAction" />
 </menu>
