--- a/app/src/main/res/drawable/ic_yhtsfat_background.xml
+++ b/app/src/main/res/drawable/ic_yhtsfat_background.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<color android:color="#E3E3E3"
+<color android:color="#FFFFFF"
     xmlns:android="http://schemas.android.com/apk/res/android">
     
 </color>
