--- a/app/src/main/res/menu/app_info_menu.xml
+++ b/app/src/main/res/menu/app_info_menu.xml
@@ -34,7 +34,7 @@
     <item
         android:id="@+id/miSourceCodeAppInfo"
         android:icon="@drawable/ic_code"
-        android:title="@string/menu_privacy_policy"
+        android:title="@string/menu_source_code"
         app:showAsAction="always"
         tools:ignore="AlwaysShowAction" />
 </menu>
