--- a/app/src/main/res/drawable/ic_play_arrow_black_24dp.xml
+++ b/app/src/main/res/drawable/ic_play_arrow_black_24dp.xml
@@ -20,6 +20,6 @@
     android:viewportWidth="24.0"
     android:viewportHeight="24.0">
     <path
-        android:fillColor="@color/mediaButtonColor"
+        android:fillColor="@color/buttonColor"
         android:pathData="M8,5v14l11,-7z" />
 </vector>
