--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#2F58D3</color>
     <color name="colorSecondary">#23B0F2</color>
 
-    <color name="mediaButtonColor">#FF000000</color>
+    <color name="buttonColor">#FF000000</color>
 
     <color name="whiteColor">#ffffff</color>
     <color name="defaultBgColor">#ffffff</color>
