--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -7,6 +7,7 @@
             app:defaultValue="@string/theme_value_system"
             app:entries="@array/theme_entries"
             app:entryValues="@array/theme_values"
+            app:icon="@drawable/ic_baseline_bedtime_24"
             app:key="@string/preference_theme_key"
             app:title="@string/settings_theme"
             app:useSimpleSummaryProvider="true" />
@@ -15,6 +16,7 @@
             app:defaultValue="@string/default_locale"
             app:entries="@array/locales_entries"
             app:entryValues="@array/locales_values"
+            app:icon="@drawable/ic_baseline_translate_24"
             app:key="@string/preference_locale_key"
             app:title="@string/settings_locale_title"
             app:useSimpleSummaryProvider="true" />
@@ -23,7 +25,8 @@
             android:defaultValue="true"
             android:key="@string/preference_auto_pip_key"
             android:summary="@string/settings_enter_pip_summery"
-            android:title="@string/settings_enter_pip_name" />
+            android:title="@string/settings_enter_pip_name"
+            app:icon="@drawable/ic_baseline_picture_in_picture_alt_24" />
 
     </PreferenceCategory>
 </PreferenceScreen>
