--- a/app/src/main/res/layout/fragment_app_info.xml
+++ b/app/src/main/res/layout/fragment_app_info.xml
@@ -84,6 +84,7 @@
                 android:layout_marginBottom="8dp"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:clickable="true"
+                android:contentDescription="@string/menu_website"
                 android:focusable="true"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -97,6 +98,7 @@
                 android:layout_marginStart="16dp"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:clickable="true"
+                android:contentDescription="@string/menu_google_play"
                 android:focusable="true"
                 app:layout_constraintBottom_toBottomOf="@id/ivWebsiteAppInfo"
                 app:layout_constraintStart_toEndOf="@id/ivWebsiteAppInfo"
@@ -123,6 +125,7 @@
                 android:layout_marginStart="16dp"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:clickable="true"
+                android:contentDescription="@string/menu_call"
                 android:focusable="true"
                 app:layout_constraintBottom_toBottomOf="@id/ivGooglePlayAppInfo"
                 app:layout_constraintStart_toEndOf="@id/ivGooglePlayAppInfo"
@@ -136,6 +139,7 @@
                 android:layout_marginStart="16dp"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:clickable="true"
+                android:contentDescription="@string/menu_facebook"
                 android:focusable="true"
                 app:layout_constraintBottom_toBottomOf="@id/ivGooglePlayAppInfo"
                 app:layout_constraintStart_toEndOf="@+id/ivPhoneAppInfo"
@@ -150,6 +154,7 @@
                 android:layout_marginStart="16dp"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:clickable="true"
+                android:contentDescription="@string/menu_email"
                 android:focusable="true"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/ivFacebookAppInfo"
