--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,8 @@
     <color name="linkColor">#1e88e5</color>
     <color name="playlistVideoCountBgColor">#212121</color>
 
+    <color name="liveStreamColor">#E42C2C</color>
+
 
     <!-- UAMP: -->
     <color name="colorAccent">#14A5A1</color>
