Fixed video player fullscreen

--- a/app/src/main/res/layout/item_playlist.xml
+++ b/app/src/main/res/layout/item_playlist.xml
@@ -27,10 +27,10 @@
             tools:text="52 Videos"
             android:alpha="0.8"
             android:textStyle="bold"
-            app:drawableTint="@color/whiteColor"
+            app:drawableTint="@color/inverseForegroundColor"
             app:drawableStartCompat="@drawable/ic_playlists"
             android:drawablePadding="8dp"
-            android:textColor="@color/whiteColor"
+            android:textColor="@color/inverseForegroundColor"
             android:background="@drawable/bg_rounded_rect"
             app:layout_constraintEnd_toEndOf="@+id/ivThumbnailPlaylistItem"
             app:layout_constraintBottom_toBottomOf="@+id/ivThumbnailPlaylistItem"
