--- a/app/src/main/res/drawable/ic_baseline_skip_next_24.xml
+++ b/app/src/main/res/drawable/ic_baseline_skip_next_24.xml
@@ -4,6 +4,6 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
-        android:fillColor="@color/buttonColor"
+        android:fillColor="@color/foregroundColor"
         android:pathData="M6,18l8.5,-6L6,6v12zM16,6v12h2V6h-2z" />
 </vector>
