--- a/app/src/main/res/drawable/ic_baseline_skip_previous_24.xml
+++ b/app/src/main/res/drawable/ic_baseline_skip_previous_24.xml
@@ -4,6 +4,6 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
   <path
-      android:fillColor="@color/buttonColor"
+      android:fillColor="@color/foregroundColor"
       android:pathData="M6,6h2v12L6,18zM9.5,12l8.5,6L18,6z"/>
 </vector>
