--- a/app/src/main/res/drawable/ic_baseline_stop_24.xml
+++ b/app/src/main/res/drawable/ic_baseline_stop_24.xml
@@ -4,6 +4,6 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
   <path
-      android:fillColor="@color/buttonColor"
+      android:fillColor="@color/foregroundColor"
       android:pathData="M6,6h12v12H6z"/>
 </vector>
