--- a/app/src/main/res/layout/activity_video_player.xml
+++ b/app/src/main/res/layout/activity_video_player.xml
@@ -8,13 +8,12 @@
 
     <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
         android:id="@+id/ytVideoPlayerView"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:enableAutomaticInitialization="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-         />
-<!--    app:showYouTubeButton="false"-->
+        app:layout_constraintTop_toTopOf="parent" />
 
     <fragment
         android:id="@+id/navHostVideoPlayer"
@@ -22,10 +21,10 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:defaultNavHost="true"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ytVideoPlayerView"
-        app:layout_constraintBottom_toBottomOf="parent"
         tools:layout="@layout/fragment_video_details" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
